# quartiles-solver

./: Cargo.toml  README.md  rustfmt.toml
benches/: benchmarks.rs
blog/: README.md
dict/: README.md  english.dict  english.txt
src/: app.rs  dictionary.rs  lib.rs  main.rs  solver.rs  tui.rs
