[package]
name = "quartiles-solver"
version = "1.0.0"
edition = "2021"
authors = ["Todd L Smith <todd.smith@xebia.com>"]

[dependencies]
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
env_logger = "0.11"
fixedstr = { version="0.5", features = ["no-alloc"] }
log = "0.4"
pfx = { version = "0.4", features = ["serde"] }
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
const_format = "0.2"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
